<resources>
    <string name="app_name">iMACHINE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_about">About</string>
    <string name="menu_our_team">Our Team</string>

    <string name="nav_header_title">Selamat Datang di Aplikasi iMachine!</string>
    <string name="nav_header_subtitle">Information Mechanical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--home -->
    <string name="judul_home">iMAChine</string>
    <string name="ket_home">Aplikasi IMachine UIKA adalah aplikasi yang dirancang untuk memberikan informasi mengenai Program Studi Teknik Mesin di Universitas IBN Khaldun (UIKA).</string>
    <string name="profil_prodi">Profil Program Studi</string>

    <string name="dosenstaff">Dosen dan Staff</string>
    <string name="strukor">Struktur Organisasi</string>
    <string name="faslab">Fasilitas dan Lab</string>

    <string name="ket_faslab">Informasi mengenai fasilitas dan laboratorium yang mendukung proses pembelajaran dan penelitian di Program Studi Mesin</string>
    <string name="ket_strukor">Struktur organisasi Prodi Mesin UIKA terdiri dari Ketua Program Studi, Sekretaris, Dosen Pengampu Mata Kuliah, Kepala...</string>
    <string name="ket_dosenstaff">Dosen dan staf Prodi Mesin UIKA terdiri dari pengajaran,  staf administrasi yang mendukung kelancaran kegiatan aka...</string>
    <string name="ket_prodi">Program Studi Mesin UIKA (Universitas Ibn Khaldun Bogor) menawarkan pendidikan teknik mesin yang berfokus pa...</string>
    <string name="btn">Lihat Disini ></string>


    <!-- nama nama dosen dan staff mesin -->
    <string name="judul_dosen">Dosen dan Staff</string>

    <string name="pakroy">Roy Waluyo, ST, MT</string>
    <string name="nik_pakroy">NIK/NIDN : 410105227/409098202</string>
    <string name="jabatan_pakroy">Ketua Program Studi</string>

    <string name="drfitri">Dr. Fitriani, ST, M.Eng.</string>
    <string name="nik_drfitri">NIK/NIDN : 410100714/413088103</string>
    <string name="jabatan_drfitri">Sekertaris Program Studi</string>


    <string name="pakbudi">Budi Hartono, ST, MT</string>
    <string name="nik_pakbudi">NIK/NIDN : 410100250/402066901</string>
    <string name="jabatan_pakbudi">Kepala Laboratorium</string>


    <string name="pak_dwi">Dwi Yuliaji, ST, MT</string>
    <string name="nik_pakdwi">NIK/NIDN : 410105228/412088202</string>
    <string name="jabatan_pakdwi">Kepala Laboratorium</string>


    <string name="pakedi">Edi Sutoyo, ST., M.Si.</string>
    <string name="nik_pakedi">NIK/NIDN : 410100319/412037702</string>
    <string name="jabatan_pakedi">Kepala Laboratorium</string>


    <string name="pak_gatot">  Gatot Eka Pramono, ST, MT</string>
    <string name="nik_pakgatot">NIK/NIDN : 410100423/421038205</string>
    <string name="jabatan_pakgatot">Kepala Laboratorium</string>


    <string name="pak_anton">Anton Royanto Ahmad, ST, M.Si</string>
    <string name="nik_pakanton">NIK/NIDN : 410100567/422108902</string>
    <string name="jabatan_pakanton">Dosen</string>


    <string name="dr_dewi">Dr. Dewi Sondari</string>
    <string name="nik_budewi">NIK/NIDN : 410100651/8983500020</string>
    <string name="jabatan_budewi">Dosen</string>


    <string name="pak_mulya">Dr. Mulya Juarsa, S.Si., MESc</string>
    <string name="nik_pakmulya">NIK/NIDN : 410100617/8877101019</string>
    <string name="jabatan_pakmulya">Dosen</string>


    <string name="bu_rizky">Rizky Ruliandini, S.Si., M.Si.</string>
    <string name="nik_burizky">NIK/NIDN : 410100528/429128002</string>
    <string name="jabatan_burizky">Dosen</string>


    <string name="pak_yogi">Yogi Sirodz Gaos, Ir., MT.</string>
    <string name="nik_pakyogi">NIK/NIDN : 410100199/8846460018</string>
    <string name="jabatan_pakyogi">Dosen</string>


    <string name="pak_irfan">Irvan Wiradinata, SIKom., M.Si</string>
    <string name="nik_pakirvan">NIK/NIDN : 410100604/8882770018</string>
    <string name="jabatan_pakirvan">Dosen</string>


    <string name="pakaris">Aris Haryanto, ST</string>
    <string name="jabatan_pakaris">Buruh</string>


    <string name="pak_marzuki">Edi Marzuki, ST</string>
    <string name="nik_pakmarzuki">NIK : 410 100 414</string>

    <string name="bugadis">Gadis Mutmainah Permatacahyani</string>
    <string name="nik_bugadis">NIK: 410 100 612</string>
    <string name="jabatan_bugadis">Staf Tata Usaha</string>


    <string name="paktri">Tri Agung Susanto,ST</string>
    <string name="nik_paktri">NIK: 410 200 3XX</string>
    <string name="jabatan_paktri">Staf Tata Usaha</string>


    <string name="pak_sutejo">Sutejo Prabowo, ST</string>
    <string name="nik_pak_sutejo">NIK: 410 200 259</string>
    <string name="jabatan_paksutejo">Buruh</string>


    <!-- Profil Prodi -->
    <string name="judul_profil_prodi">Profil Program Studi</string>

    <string name="judul_prodi">Tentang dan Sejarah Teknik Mesin FTS UIKA Bogor</string>
    <string name="profil_text1">Fakultas Teknik dan Sains Universitas Ibn Khaldun Bogor (FTS-UIKA) Bogor berdiri sejak tahun 1974 dengan nama Fakultas Teknik (FT-UIKA). Seiring dengan perkembangan regulasi dan pengembangan institusi maka sejak tahun 2018 Fakultas Teknik berganti nama menjadi Fakultas Teknik dan Sains melalui Keputusan Rektor Nomor: 010/K.13/IIIa/KR-PNFT/UIKA/2018. Fakultas Teknik dan Sains adalah salah satu dari 7 (tujuh) Fakultas yang berada di lingkungan Universitas Ibn Khaldun Bogor.  FTS-UIKA Bogor terdiri dari 4 (empat) Program Studi yaitu 1) Program Studi Teknik Sipil, 2) Program Studi Teknik Mesin, 3) Program Studi Teknik Elektro, dan 4) Program Studi Teknik Informatika. </string>
    <string name="profil_text2">Jurusan Teknik Mesin tidak melulu soal mesin motor, mobil, dan kegiatan perbengkelan lainnya. Tapi kamu juga akan belajar hal-hal terkait konversi energi, konstruksi dan perancangan, teknik produksi, juga material. Memang benar sih, secara umum kamu akan mempelajari mesin dengan menggunakan dasar fisika dan matematika, seperti pergerakan mesin, aliran air untuk mesin, material dan desain mesin, elemen penting seperti roda gigi dan sumber mata air, metode pengolahan, metode produksi, pengendalian melalui komputer, dsb.</string>
    <string name="profil_text3">Program Studi Teknik Mesin Fakultas Teknik dan Sains UIKA Bogor dirancang sedemikian rupa, agar alumni Program Studi Teknik Mesin mempunyai pengetahuan dan keterampilan secara komprehensif dan proposional dalam cakupan cukup luas. bekal yang diberikan kepada alumni meliputi pengetahuan tentang sikap dan perilaku, ilmu-ilmu dasar keahlian, dan ilmu-ilmu penunjang, di samping pengetahuan tentang Teknik Mesin atau Mekanikal yang merupakan fokus dari program studi teknik Mesin. secara umum alumni juga mempunyai kompetensi tambahan yang memadai dalam bidang komputer/teknologi informasi, telekomunikasi, dan kewirausahaan. Prodi ini terkareditasi B.</string>
    <string name="prospek">Prospek Lulusan</string>
    <string name="prospek1">Profesional konsultan pada bidang teknik, project manager, baik dilembaga pemerintahan maupun swasta, dll.
 </string>
    <string name="prospek2">Selain itu Program Studi Teknik Sipil bekerjasama dengan Badan Kerjasama Teknik Mesin (BKSTM) sebagai anggota, hal ini memungkinkan setiap pembelajaran yang ada di program studi selalu terupdate dengan perkembangan ilmu pengetahuan yang ada saat ini.</string>


    <string name="judul_our_team">Our Team iMachine</string>

    <string name="nama_satria">Satria Sudirja</string>
    <string name="npm_satria">221106042871 | Team Leader, Mobile Development</string>

    <string name="nama_kintan">Kintan Novia Azzahra</string>
    <string name="npm_kintan">221106042937 | Mobile Development</string>

    <string name="nama_kania">Bunga Kania</string>
    <string name="npm_kania">221106042729 | Documentation</string>


    // gallery
    <string name="text_gallery_1">Peralatan Laboratarium</string>
    <string name="text_gallery_2">Sekretariat Himpunan Mahasiswa Mesin</string>
    <string name="text_gallery_3">Laboratorium Sistem Otomatisasi Dan Robotika</string>
    <string name="text_gallery_4">Laboratorium Mekanika Struktur</string>
    <string name="text_gallery_5">Laboratorium Manufaktur</string>
    <string name="text_gallery_6">Laboratorium Energi</string>
    <string name="text_gallery_7">Seminar K3 Umum</string>
    <string name="text_gallery_8">Malam Keakraban Himpunan Mahasiswa Mesin</string>

    //about
    <string name="judul_about">iMachine</string>
    <string name="nama_app1">Nama Aplikasi:</string>
    <string name="nama_app2">iMachine</string>
    <string name="versi1">Versi:</string>
    <string name="versi2">1.0.0</string>
    <string name="deskripsi1">Deskripsi:</string>
    <string name="deskripsi2">iMachine UIKA adalah aplikasi resmi yang dirancang untuk memberikan informasi lengkap mengenai Program Studi Teknik Mesin di Universitas Ibn Khaldun. Aplikasi ini bertujuan untuk memudahkan akses informasi bagi mahasiswa, calon mahasiswa, dan masyarakat umum.</string>
    <string name="fitur1">Fitur Utama:</string>
    <string name="fitur2">• Profil Program Studi: Informasi mengenai visi, misi, dan sejarah program studi</string>
    <string name="fitur3">• Dosen dan Staf: Daftar dosen dan staf lengkap dengan jabatan dan bidang keahlian</string>
    <string name="fitur4">• Struktur Organisasi: Gambaran organisasi internal program studi</string>
    <string name="fitur5">• Fasilitas Laboratorium: Informasi mengenai fasilitas laboratorium yang tersedia</string>
    <string name="fitur6">• Galeri: Dokumentasi foto program studi</string>
    <string name="kontak1">Kontak:</string>
    <string name="kontak2">• Email: teknikmesin@uika.ac.id</string>
    <string name="kontak3">• Telepon: (021) 123-4567</string>
    <string name="kontak4">• Alamat: Jl. KH. Sholeh Iskandar, Kota Bogor, Jawa Barat</string>
    <string name="hak_cipta">Hak cipta © 2025 Program Studi Teknik Mesin UIKA.</string>

    //struktur organisasi
    <string name="judul_struktur">Struktur Organisasi</string>

    //fasilitas lab
    <string name="judul_fasilitas">Fasilitas Lab</string>
    <string name="desk_fasilitas1">Digunakan untuk mempelajari teknologi pendinginan dalam bidang teknik mesin.</string> //alat dingin
    <string name="desk_fasilitas2">Pusat kegiatan mahasiswa teknik mesin untuk berorganisasi, berdiskusi, dan mengembangkan potensi diri.</string>
    <string name="desk_fasilitas3">Tempat untuk mempelajari dan mengembangkan sistem kontrol otomatis serta merancang dan membangun robot.</string>
    <string name="desk_fasilitas4">Laboratorium ini difokuskan pada pengujian dan analisis kekuatan serta stabilitas struktur bangunan atau komponen mesin.</string>
    <string name="desk_fasilitas5">Tempat untuk mempelajari berbagai proses produksi, seperti permesinan, pengelasan, dan pencetakan 3D.</string>
    <string name="desk_fasilitas6">Laboratorium ini berfokus pada studi tentang sumber energi, konversi energi, dan efisiensi energi.</string>

</resources>