<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Set 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="196dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/splashlogo" />

                <TextView
                    android:id="@+id/text"
                    android:textSize="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppinsextrabold" />

                <TextView
                    android:id="@+id/keterangan"
                    android:layout_width="387dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ket_home"
                    android:textColor="@android:color/black"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Set 2 and others -->
            <!-- Semua RelativeLayout berikutnya tidak perlu diubah, karena sudah berada dalam ScrollView -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Isi seperti sebelumnya -->
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="397dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rt14"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true" />


                <ImageView
                    android:id="@+id/avatar1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/prodian" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="150dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/profil_prodi"

                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <!-- Set 2 -->

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ket_prodi"
                    android:textColor="@android:color/black"

                    android:textSize="10dp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView1"
                    android:layout_marginLeft="285dp"
                    android:textSize="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="-6dp"
                    android:text="@string/btn" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="397dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rt14"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true" />


                <ImageView
                    android:id="@+id/avatar2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/dosenan" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="150dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dosenstaff"

                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <!-- Set 2 -->

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ket_dosenstaff"
                    android:textColor="@android:color/black"

                    android:textSize="10dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView2"
                    android:layout_marginLeft="285dp"
                    android:textSize="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="-6dp"
                    android:text="@string/btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="397dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rt14"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true" />


                <ImageView
                    android:id="@+id/avatar3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/stukturorganisasian" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="150dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/strukor"

                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <!-- Set 2 -->

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ket_strukor"
                    android:textColor="@android:color/black"

                    android:textSize="10dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView3"
                    android:layout_marginLeft="285dp"
                    android:layout_marginTop="5dp"
                    android:textSize="10dp"
                    android:layout_marginBottom="-6dp"
                    android:text="@string/btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="397dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rt14"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true" />


                <ImageView
                    android:id="@+id/avatar4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/fasilitasan" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="150dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/faslab"

                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <!-- Set 2 -->

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ket_faslab"
                    android:textColor="@android:color/black"

                    android:textSize="10dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imageView4"
                    android:layout_marginLeft="285dp"
                    android:layout_marginTop="5dp"
                    android:textSize="10dp"
                    android:layout_marginBottom="-6dp"
                    android:text="@string/btn" />
            </RelativeLayout>
            <!-- Tambahkan RelativeLayout lainnya di sini -->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
